# org.freedesktop.FileManager1.common

./: meson.build  org.freedesktop.FileManager1.service  readme.md
config/: lf-wrapper.sh  nnn-wrapper.sh  ranger-wrapper.sh  vifm-wrapper.sh  yazi-wrapper.sh
include/: config.h  file_manager_dbus.h
src/: config.c  file_manager_dbus.c
